FIND_PACKAGE(statismo REQUIRED)
include_directories(${statismo_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ) 
ADD_ELXCOMPONENT( SimpleStatisticalDeformationModelTransformElastix
 itkAdvancedStatisticalDeformationModelTransform.h
 itkAdvancedStatisticalModelTransformBase.h
 itkAdvancedStatisticalModelTransformBase.txx
 elxStatisticalDeformationModelTransform.h
 elxStatisticalDeformationModelTransform.hxx
 elxStatisticalDeformationModelTransform.cxx )
TARGET_LINK_LIBRARIES( SimpleStatisticalDeformationModelTransformElastix statismo_core)
